k8s_deployment/k8s/api_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: k8s-web-sample
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: g23988/k8s-web-sample-api:latest 
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: k8s-web-sample
spec:
  selector:
    app: api
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
