k8s_deployment/k8s/redis_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: k8s-web-sample
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: g23988/k8s-web-sample-redis:latest 
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: k8s-web-sample
spec:
  selector:
    app: redis
  type: NodePort
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
